@@ -1,4 +1,4 @@
-MooseX::AttributeHelpers version 0.06
+MooseX::AttributeHelpers version 0.08
 ===========================
 
 See the individual module documentation for more information
@@ -27,7 +27,7 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2007 Infinity Interactive, Inc.
+Copyright (C) 2007-2008 Infinity Interactive, Inc.
 
 http://www.iinteractive.com
 
